Development Branch into Main (#22)
* added loss function

* Added storage objects

* changed list to List

* added init

* added init

* added init

* initial commit

* added imputer

* added explainer object

* added init

* changed import

* added run_pfi

* changed import

* Added List to imports

* changed config vars

* changed variable name

* removed print statements

* changed imports

* added alpha to init,changed impute call

* added sequence storage to init

* changed args of imputer

* called init of parent class

* Added length method

* Test inc pfi (#15)

* added docs

* changed imports

* added tests for storage

* changed directory structure

* changed imports

* fixed bug

* changed imports

* added FeatureImportance plotter

* reworked batch and incremental datasets and loaders, added Adult ann BankMarketing datasets

* typo

* Sequence Sampling bugfix (#17)

* added docs

* changed imports

* added tests for storage

* changed directory structure

* changed imports

* fixed bug

* changed imports

* fixed bug - moved storage update to end

* rework PFI and imputers: add custom loss support (classification, regression), generic model function

* minor tweaks

* extended RiverToPredictionFunction

* add small sanity check for the reservoir update mechanisms.

* closes #20.

* refactored imputers

* refactored storage

* refactored pfi explainer

* refactored package structure

* added incremental SAGE implementation

* minor change

* refactored datasets and utils

* refactored test datasets

* refactored Datasets and created setup functions for setting up tests and experiments up

* experiment for non-concept drift induced scenarios

* created an interval and batch sage explainer with storage and imputers

* added support for ylims in performance plots

* fixed the concept drift stream removing the need for a seperate sudden_drif

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 workdirs/
 .idea/
 data/datasets/
+/experiments/iSAGE_paper/result_data
 
 # IDE and OS cache
 .idea
@@ -63,7 +64,7 @@ coverage.xml
 
 
 # Sphinx documentation
-docs/build/
+docs/_build/
 
 # PyBuilder
 target/
@@ -88,13 +89,13 @@ __pypackages__/
 # Environments
 .env
 .venv
+.venv_test_init_release
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
 venv*
-
 
 # mkdocs documentation
 /site
