--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -24,7 +24,4 @@ sphinx:
 # Optionally declare the Python requirements required to build your docs
 python:
   install:
-    - method: pip
-      path: .
-      extra_requirements:
-        - docs
+    - requirements: docs/requirements.txt
